deploy/generic-k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todolist-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todolist
spec:
  hosts:
  - "*"
  gateways:
  - todolist-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /favicon.ico
    - uri:
        prefix: /js/
    - uri:
        prefix: /css/
    - uri:
        prefix: /api
    route:
    - destination:
        host: todolist
        port:
          number: 80
